added fit.py and gitingnore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Files #
+#########
+*.fits
+
+# Byte-compiled / optimized / DLL files #
+#########################################
+__pycache__/
+
 # Compiled source #
 ###################
 *.com
