--- a/analysis/results/no_diffuse/all_IDs_ene_1_200_bin_20_binsz_0.02/models/10_bpl_disk_center_free_fitted.yaml
+++ b/analysis/results/no_diffuse/all_IDs_ene_1_200_bin_20_binsz_0.02/models/10_bpl_disk_center_free_fitted.yaml
@@ -1541,4 +1541,4 @@ components:
         -   name: reference
             value: 1.0
             unit: TeV
-covariance: 10_bpl_disk_center_free.yaml_fitted_covariance.dat
+covariance: 10_bpl_disk_center_free_fitted_covariance.dat
