--- a/analysis/results/single_model/strategy_1/tol_0.01/no_diffuse/all_IDs_ene_0.7_100_bin_20_binsz_0.05/models/04_ecpl_gauss_center_fixed_fitted.yaml
+++ b/analysis/results/single_model/strategy_1/tol_0.01/no_diffuse/all_IDs_ene_0.7_100_bin_20_binsz_0.05/models/04_ecpl_gauss_center_fixed_fitted.yaml
@@ -2,22 +2,28 @@ components:
 -   name: cygnus_diffuse
     type: SkyModel
     spectral:
-        type: BrokenPowerLawSpectralModel
+        type: ExpCutoffPowerLawSpectralModel
         parameters:
-        -   name: index1
-            value: 2.5
-            min: 2.0
-            max: 3.0
-        -   name: index2
-            value: 2.7
+        -   name: index
+            value: 2.1000002386476333
+            error: 0.00012857073128800896
             min: 2.1
             max: 3.0
         -   name: amplitude
-            value: 1.0e-13
+            value: 3.151841579335126e-11
             unit: cm-2 s-1 TeV-1
-        -   name: ebreak
-            value: 10.0
+            error: 1.4642271735596309e-12
+        -   name: reference
+            value: 1.0
             unit: TeV
+        -   name: lambda_
+            value: 0.09999999778188269
+            unit: TeV-1
+            error: 3.856364713711216e-06
+            min: 0.001
+            max: 0.1
+        -   name: alpha
+            value: 1.0
     spatial:
         type: GaussianSpatialModel
         frame: galactic
@@ -31,8 +37,9 @@ components:
             unit: deg
             frozen: true
         -   name: sigma
-            value: 2.1
+            value: 1.8702151895601165
             unit: deg
+            error: 0.04988939296628959
             min: 0.1
             max: 3.0
         -   name: e
@@ -46,8 +53,9 @@ components:
         type: LogParabolaSpectralModel
         parameters:
         -   name: amplitude
-            value: 3.0e-15
+            value: 4.213169651598324e-15
             unit: cm-2 s-1 TeV-1
+            error: 1.2888747618663265e-15
         -   name: reference
             value: 7.0
             unit: TeV
@@ -84,8 +92,9 @@ components:
         type: LogParabolaSpectralModel
         parameters:
         -   name: amplitude
-            value: 5.0e-15
+            value: 5.543219615069195e-15
             unit: cm-2 s-1 TeV-1
+            error: 1.355158904504045e-15
         -   name: reference
             value: 7.0
             unit: TeV
@@ -108,7 +117,7 @@ components:
             unit: deg
             frozen: true
         -   name: sigma
-            value: 0.22
+            value: 0.21999999999999997
             unit: deg
             frozen: true
         -   name: e
@@ -125,8 +134,9 @@ components:
             value: 1.5
             frozen: true
         -   name: amplitude
-            value: 2.0e-13
+            value: 1.9339476296308904e-13
             unit: cm-2 s-1 TeV-1
+            error: 1.369068405726789e-14
         -   name: reference
             value: 1.0
             unit: TeV
@@ -140,7 +150,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2020+368.fits
+        filename: /home/antonio/Data/ASTRI/DC-GCygni/skymodel/VER_J2020+368.fits
         normalize: true
         unit: 1 / sr
 -   name: VER J2018+367
@@ -152,8 +162,9 @@ components:
             value: 2.0
             frozen: true
         -   name: amplitude
-            value: 3.8e-13
+            value: 3.847669143523242e-13
             unit: cm-2 s-1 TeV-1
+            error: 3.1152923988038347e-14
         -   name: reference
             value: 1.0
             unit: TeV
@@ -167,7 +178,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2018+367.fits
+        filename: /home/antonio/Data/ASTRI/DC-GCygni/skymodel/VER_J2018+367.fits
         normalize: true
         unit: 1 / sr
 -   name: VER J2016+371
@@ -179,8 +190,9 @@ components:
             value: 2.3
             frozen: true
         -   name: amplitude
-            value: 3.0e-13
+            value: 2.7698541555710565e-13
             unit: cm-2 s-1 TeV-1
+            error: 3.013853691556868e-14
         -   name: reference
             value: 1.0
             unit: TeV
@@ -194,7 +206,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2016+371.fits
+        filename: /home/antonio/Data/ASTRI/DC-GCygni/skymodel/VER_J2016+371.fits
         normalize: true
         unit: 1 / sr
 -   name: LHAASO J2032+4102
@@ -206,8 +218,9 @@ components:
             value: 2.0
             frozen: true
         -   name: amplitude
-            value: 1.24e-13
+            value: 1.1461094557052695e-13
             unit: cm-2 s-1 TeV-1
+            error: 9.006264917612725e-15
         -   name: reference
             value: 2.3
             unit: TeV
@@ -244,8 +257,9 @@ components:
         type: LogParabolaSpectralModel
         parameters:
         -   name: amplitude
-            value: 6.0e-16
+            value: 6.346653031465613e-16
             unit: cm-2 s-1 TeV-1
+            error: 5.542073464635691e-17
         -   name: reference
             value: 40.0
             unit: TeV
@@ -285,7 +299,6 @@ components:
         parameters:
         -   name: norm
             value: 1.0
-            frozen: false
         energy:
             data:
             - 9.999999999999996e-06
@@ -482,7 +495,7 @@ components:
         type: TemplateSpatialModel
         frame: galactic
         parameters: []
-        filename: $HOME/Data/ASTRI/DC-GCygni/skymodel/VER_J2019+407.fits
+        filename: /home/antonio/Data/ASTRI/DC-GCygni/skymodel/VER_J2019+407.fits
         normalize: true
         unit: 1 / sr
 -   name: 3HWC J2043+443
@@ -492,7 +505,6 @@ components:
         parameters:
         -   name: norm
             value: 1.0
-            frozen: false
         energy:
             data:
             - 0.1
@@ -604,7 +616,7 @@ components:
         frame: galactic
         parameters:
         -   name: lon_0
-            value: 83.7444197246352
+            value: 83.74441972463518
             unit: deg
             frozen: true
         -   name: lat_0
@@ -629,7 +641,6 @@ components:
         parameters:
         -   name: norm
             value: 1.0
-            frozen: false
         energy:
             data:
             - 0.1
@@ -755,7 +766,6 @@ components:
         parameters:
         -   name: norm
             value: 1.0
-            frozen: false
         energy:
             data:
             - 0.1
@@ -881,7 +891,6 @@ components:
         parameters:
         -   name: norm
             value: 1.0
-            frozen: false
         energy:
             data:
             - 0.1
@@ -1007,7 +1016,6 @@ components:
         parameters:
         -   name: norm
             value: 1.0
-            frozen: false
         energy:
             data:
             - 0.1
@@ -1144,7 +1152,6 @@ components:
         parameters:
         -   name: norm
             value: 1.0
-            frozen: false
         energy:
             data:
             - 0.1
@@ -1270,7 +1277,6 @@ components:
         parameters:
         -   name: norm
             value: 1.0
-            frozen: false
         energy:
             data:
             - 0.1
@@ -1407,7 +1413,6 @@ components:
         parameters:
         -   name: norm
             value: 1.0
-            frozen: false
         energy:
             data:
             - 0.1
@@ -1528,15 +1533,16 @@ components:
             frozen: true
 -   type: FoVBackgroundModel
     datasets_names:
-    - my-dataset
+    - dc_cygnus-stacked
     spectral:
         type: PowerLawNormSpectralModel
         parameters:
         -   name: norm
-            value: 1.0
+            value: 0.9873081000880617
+            error: 0.0005998533355063332
         -   name: tilt
             value: 0.0
         -   name: reference
             value: 1.0
             unit: TeV
-covariance: 08_bpl_gauss_center_fixed_covariance.dat
+covariance: 04_ecpl_gauss_center_fixed_fitted_covariance.dat
